# ioc-cfn-cognition-engines

./: .env.example  .gitattributes  .gitignore  .legitignore  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  caching  docker-compose.yml  env.example  evidence  ingestion  missions.yaml  pyproject.toml  requirements-all.txt  sonar-project.properties  supervisord.conf  test_callback_agents.py  test_via_semantic_neg_agents.py  typescript
.github/workflows/: ci.yaml  publish-package.yml  publish-to-artifactory.yml
app/src/: server.py
bge-small-en-v1.5/: model_optimized.onnx
caching/: README.md  Taskfile.yml  __init__.py
caching-layer/: Dockerfile  README.md  Taskfile.yml  evidence_response.json  requirements.txt
caching-layer/app/: __init__.py  dependencies.py  main.py
caching-layer/app/agent/: caching_layer.py  service.py
caching-layer/app/api/: __init__.py  routes.py  schemas.py
caching-layer/app/config/: __init__.py  settings.py
caching-layer/app/data/: __init__.py  base.py
caching-layer/scripts/: demo_store_search.sh  piorot_1.json
caching-layer/tests/: conftest.py
caching-layer/tests/integration/: test_api.py
caching-layer/tests/unit/: test_agent.py  test_caching_layer.py
caching/app/: __init__.py
caching/app/agent/: __init__.py  caching_layer.py  caching_layer_manager.py
caching/tests/: conftest.py
caching/tests/unit/: test_caching_layer.py  test_caching_layer_manager.py
common/data_model/: __init__.py  cfn_cognitive_agents.py  cfn_memory.py  config.py
deploy/charts/ci-reasoner-base-lib/: Chart.yaml  values.yaml
docs/: usage.md
evidence/: .env.example  .gitignore  README.md  Taskfile.yml  __init__.py  evidence_response.json  openapi.json
evidence-gathering-agent/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  Taskfile.yml  openapi.json  pyproject.toml  requirements.txt
evidence-gathering-agent/app/: dependencies.py  main.py
evidence-gathering-agent/app/agent/: embeddings.py  evidence.py  llm_clients.py  multi_entities.py  single_entity.py  utiles.py
evidence-gathering-agent/app/api/: routes.py  schemas.py
evidence-gathering-agent/app/config/: settings.py
evidence-gathering-agent/app/data/: http_repo.py  mock_repo.py
evidence-gathering-agent/scripts/: run_local.sh
evidence-gathering-agent/tests/: conftest.py
evidence-gathering-agent/tests/integration/: test_api.py
evidence-gathering-agent/tests/unit/: test_agent.py
evidence/app/: dependencies.py  main.py
evidence/app/agent/: embeddings.py  embeddings_config.yml  evidence.py  llm_clients.py  multi_entities.py  rag_retrieval.py  single_entity.py  utiles.py
evidence/app/api/: routes.py  schemas.py
evidence/app/config/: __init__.py  settings.py
evidence/app/data/: base.py  cache_client.py  http_repo.py  mock_repo.py
evidence/scripts/: run_local.sh
evidence/tests/: conftest.py
evidence/tests/integration/: test_api.py
evidence/tests/unit/: test_agent.py
gateway/: .dockerignore  .env.example  Dockerfile  README.md  __init__.py
gateway/app/: __init__.py  client.py  main.py  registration.py
ingestion/: .dockerignore  .env.example  README.md  __init__.py  openapi.json  run_ingestion_e2e.py
ingestion-cognitive-agent/: Dockerfile  README.md  Taskfile.yml  requirements.txt
ingestion-cognitive-agent/app/: dependencies.py  main.py
ingestion-cognitive-agent/app/agent/: __init__.py  concept_vector_store.py  knowledge_processor.py  prompts.py  service.py
ingestion-cognitive-agent/app/api/: __init__.py  routes.py  schemas.py
ingestion-cognitive-agent/app/config/: settings.py
ingestion-cognitive-agent/app/data/: base.py
ingestion-cognitive-agent/src/: common.py  knowledge_processor.py  kxp_base.py  telemetry_extraction.py
ingestion-cognitive-agent/tests/: __init__.py  conftest.py
ingestion-cognitive-agent/tests/integration/: __init__.py  test_api.py
ingestion-cognitive-agent/tests/unit/: test_agent.py
ingestion/app/: __init__.py  dependencies.py  main.py
ingestion/app/agent/: __init__.py  adapters.py  base.py  concept_vector_store.py  ingest_data.py  knowledge_processor.py  prompts.py  rag.py  rag_config.json  service.py
ingestion/app/api/: routes.py  schemas.py
ingestion/app/config/: __init__.py  settings.py
ingestion/app/data/: __init__.py  base.py  mock_repo.py
ingestion/tests/: __init__.py  conftest.py
ingestion/tests/integration/: __init__.py  test_api.py
ingestion/tests/unit/: __init__.py  test_agent.py  (+1 more)
protocol/: __init__.py
protocol/examples/: sstp-negotiate-initiate-example.json  sstp-negotiate-offer-accept-example.json  sstp-negotiate-offer-reject-example.json
protocol/sstp/: __init__.py  __main__.py  _base.py  commit.py  delegation.py  evidence_bundle.py  intent.py  knowledge.py  memory_delta.py  negmas_sao.py  negotiate.py  query.py
sample-data/: README.md
scripts/: README.md  evaluate_common_data_models.py  ingest_and_evidence.sh  ingest_otel.sh  lint.sh  run_evidence.sh  setup_local_links.sh  unit-test.sh
semantic-negotiation-agent/: README.md  Taskfile.yml  requirements.txt
semantic-negotiation-agent/app/: __init__.py  dependencies.py  main.py
semantic-negotiation-agent/tests/: conftest.py
semantic_negotiation/: README.md  run_main.sh  sample_curl_init1.sh  test_flow.sh  test_two_agents.py
semantic_negotiation/app/: __init__.py  dependencies.py  main.py
semantic_negotiation/evaluation/: __init__.py
semantic_negotiation/tests/: conftest.py
test_callback_agents_go/: README.md  go.mod  main.go
test_callback_agents_go/sstp/: sstp.go
tests/common/: test_data_model.py
tests/data/: evidence_request_body.json  extraction_request_body.json
tests/integration/: README.md  test_usage_examples_live.py  test_usage_examples_mock.py
tkf-data-layer/: .env.example  .gitignore  README.md  pyproject.toml
tkf-data-layer/app/: __init__.py  config.py  main.py
tkf-data-layer/app/api/: routes.py  schemas.py
tkf-data-layer/app/graph/: __init__.py  neo4j_store.py
tkf-data-layer/app/semantic/: __init__.py  embeddings.py
tkf-data-layer/scripts/: KCR_sample1.json  load_kcr.py
(+73 files in other folders)
