[tool.poetry]
name = "ioc-cfn-cognitive-agents"
version = "0.1.0"
description = "IOC CFN Cognitive Agents – monorepo (gateway + ingestion + evidence + caching)"
authors = ["Your Team <team@example.com>"]
readme = "README.md"
package-mode = false

# ── Shared runtime dependencies (union of all four services) ─────────────────
[tool.poetry.dependencies]
python = "^3.11"

# Web framework & ASGI server
fastapi = ">=0.110"
uvicorn = {version = ">=0.27", extras = ["standard"]}
httpx = ">=0.27"

# Data validation / settings
pydantic = ">=2.12.5"
pydantic-settings = ">=2.0.0"
python-dotenv = ">=1.0.1"

# AI / ML – fastembed is a lightweight ONNX-based embedding library;
# no PyTorch / CUDA dependency, image stays small.
fastembed = ">=0.4.0"
typer = ">=0.9.0"
openai = ">=2.17.0"
numpy = ">=1.26,<3"

# Vector store
faiss-cpu = ">=1.7.4"

# Negotiation framework (semantic-negotiation-agent)
negmas = ">=0.10"

# Process supervisor (runs all services inside one container)
supervisor = ">=4.2.0"

# ── Security pins (CVEs) ──────────────────────────────────────────────────────
urllib3 = ">=2.6.3"   # CVE-2026-21441: decompression-bomb bypass on redirects
# Pillow: cannot pin >=12.1.1 here – fastembed requires pillow<12.0. CVE-2026-25990
# (PSD out-of-bounds write) remains until fastembed supports Pillow 12+. Mitigate by
# not opening untrusted PSDs or use Image.open(..., formats=...) to exclude PSD.

# ── Service-specific extras kept at top level ─────────────────────────────────
# (langchain-openai, pandas, requests, werkzeug removed – not imported in any
#  app/*.py file; were inherited from an older pyproject.toml template)

# ── Dev / test dependencies ───────────────────────────────────────────────────
[tool.poetry.group.dev.dependencies]
pytest = ">=7.0.0"
pytest-cov = ">=4.1.0"
pytest-asyncio = ">=0.23.0"
httpx = ">=0.27"          # also needed at runtime but explicit here for tests
ruff = ">=0.1.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = [
    "gateway/tests",
    "ingestion-cognitive-agent/tests",
    "evidence-gathering-agent/tests",
    "caching-layer/tests",
    "semantic-negotiation-agent/tests",
    "tests",
]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v -s --tb=short"

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
