[tool.poetry]
name = "evidence-gathering-agent"
version = "0.1.0"
description = "Evidence gathering agent service (DB-agnostic, API-first)"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.110"
uvicorn = { version = "^0.27", extras = ["standard"] }
pydantic = "^2.5"
httpx = "^0.27"
python-dotenv = "^1.0.1"
numpy = ">=1.26,<3"
fastembed = ">=0.4.0"
openai = "^2.17.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4"
pytest-asyncio = "^0.23"
requests = "^2.31"
ruff = "^0.8"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

